demo-db/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - name: pg
      protocol: TCP
      port: 5432
      targetPort: 5432
